feat: improve project
